tests/toy/neg/000643_mutation.toylang
program a = { a = a == sleep; } .
